# RaylTime

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_header.h
include/: AABBTree.h  AABB_visualized.h  Animator.h  BoundingBox.h  Camera.h  DirectionalLight.h  Light.h  Material.h  MovingLight.h  Object.h  PointLight.h  Quad.h  Ray.h  Sphere.h  SphereAnim.h  Triangle.h  TriangleAnim.h  blinn_phong_shading_aabb.h  box_intersect_box.h  collision_detect.h  first_hit_aabb.h  globals.h  insert_box_into_box.h  insert_quad_into_box.h  insert_sphere_into_box.h  insert_sphereanim_into_box.h  insert_triangle_into_box.h  rand_colour_double.h  random_rgb_colour.h  ray_intersect_box.h  raycolor.h  raytrace.h  read_level.h  reflect.h  viewing_ray.h
levels/: bridge.txt  circle.txt  defaultlevel - BackupCopy.txt  defaultlevel - Copy.txt  defaultlevel.txt  directional.txt  hallofmirrors.txt  lettherebelight.txt  lightplay.txt  movinglightdemo.txt
src/: AABBTree.cpp  AABBTree_collide.cpp  AABBTree_intersect.cpp  DirectionalLight.cpp  PointLight.cpp  Quad.cpp  Sphere.cpp  SphereAnim.cpp  Triangle.cpp  TriangleAnim.cpp  blinn_phong_shading_aabb.cpp  box_intersect_box.cpp  collision_detect.cpp  first_hit_aabb.cpp  insert_box_into_box.cpp  insert_quad_into_box.cpp  insert_sphere_into_box.cpp  insert_sphereanim_into_box.cpp  insert_triangle_into_box.cpp  ray_intersect_box.cpp  raycolor.cpp  raytrace.cpp  reflect.cpp  viewing_ray.cpp
